--- a/Assembly_Line/Assembly_Line.sim/sim_1/behav/xsim/xsim.dir/testbench_behav/webtalk/usage_statistics_ext_xsim.html
+++ b/Assembly_Line/Assembly_Line.sim/sim_1/behav/xsim/xsim.dir/testbench_behav/webtalk/usage_statistics_ext_xsim.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2188600</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Apr 23 05:27:06 2019</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Apr 24 05:36:48 2019</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>XSIM v2018.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>c25541ad702548beb97296cea1ddb3cb</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>75</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>134</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>f0b40cc5-26d0-42f5-b025-eafc5c7a1ede</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>f0b40cc5-26d0-42f5-b025-eafc5c7a1ede</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>FALSE</TD>
@@ -35,27 +35,17 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>command=xelab</TD>
-    <TD>debug=typical</TD>
-    <TD>dpi_used=false</TD>
-    <TD>file_counter=19</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gendll=false</TD>
-    <TD>hwcosim=false</TD>
-    <TD>sdfmodeling=false</TD>
-    <TD>vhdl2008=false</TD>
+<TR ALIGN='LEFT'>    <TD>command=xsim</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>compiler_memory=210968_KB</TD>
-    <TD>compiler_time=1.50_sec</TD>
-    <TD>simulation_image_code=51 KB</TD>
-    <TD>simulation_image_data=7 KB</TD>
-</TR><TR ALIGN='LEFT'>    <TD>total_instances=24</TD>
-    <TD>total_nets=0</TD>
-    <TD>total_processes=98</TD>
-    <TD>xilinx_hdl_libraries_used=secureip unimacro_ver unisims_ver </TD>
+<TR ALIGN='LEFT'>    <TD>iteration=1</TD>
+    <TD>runtime=1 us</TD>
+    <TD>simulation_memory=128556_KB</TD>
+    <TD>simulation_time=0.02_sec</TD>
+</TR><TR ALIGN='LEFT'>    <TD>trace_waveform=true</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
